crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__dep-tiers.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "All the dependent tiers besides 1-1",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "actions",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Act"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "addressee",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Add"
        },
        {
          "data": "alternative",
          "type": "Alt"
        },
        {
          "data": "cohesion",
          "type": "Coh"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "comments [foo]",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Com"
        },
        {
          "data": "salt",
          "type": "Def"
        },
        {
          "data": "english translation",
          "type": "Eng"
        },
        {
          "data": "errcoding",
          "type": "Err"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "explanation",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Exp"
        },
        {
          "data": "facial",
          "type": "Fac"
        },
        {
          "data": "flow.",
          "type": "Flo"
        },
        {
          "data": "target gloss",
          "type": "Gls"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "gesture",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Gpx"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "intonation",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Int"
        },
        {
          "data": "orthography",
          "type": "Ort"
        },
        {
          "data": "paralinguistics",
          "type": "Par"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "situation",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Sit"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "speech act",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Spa"
        },
        {
          "data": "23:12:33",
          "type": "Tim"
        },
        {
          "data": {
            "content": {
              "segments": [
                {
                  "text": "coding",
                  "type": "text"
                }
              ]
            }
          },
          "type": "Cod"
        },
        {
          "data": {
            "content": "/\"{: o/",
            "label": "xfoo"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "this is xch stuff",
            "label": "xch"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "In this opening segment the class reviews what they studied last\n\ttime. In fact, the whole lesson is devoted to reviewing previously\n\tlearned material. In the Czech data set, 25% of the lessons were\n\tentirely review (Hiebert et al., 2003, Mathematics Teaching in Seven\n\tCountries: Results from the TIMSS 1999 Video Study\n\t[hereafter Video Report], figure 3.9).",
            "label": "xRES"
          },
          "type": "UserDefined"
        },
        {
          "data": {
            "content": "max length of 7 total",
            "label": "xabcdef"
          },
          "type": "UserDefined"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hey",
                  "type": "text"
                }
              ],
              "raw_text": "hey",
              "span": {
                "end": 203,
                "start": 200
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "man",
                  "type": "text"
                }
              ],
              "raw_text": "man",
              "span": {
                "end": 207,
                "start": 204
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "what",
                  "type": "text"
                }
              ],
              "raw_text": "what",
              "span": {
                "end": 212,
                "start": 208
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "in",
                  "type": "text"
                }
              ],
              "raw_text": "in",
              "span": {
                "end": 215,
                "start": 213
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "span": {
                "end": 219,
                "start": 216
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "world",
                  "type": "text"
                }
              ],
              "raw_text": "world",
              "span": {
                "end": 225,
                "start": 220
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "isn't",
                  "type": "text"
                }
              ],
              "raw_text": "isn't",
              "span": {
                "end": 231,
                "start": 226
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "this",
                  "type": "text"
                }
              ],
              "raw_text": "this",
              "span": {
                "end": 236,
                "start": 232
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "note need to put bracketed material on same line above",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
